--- a/index.html
+++ b/index.html
@@ -64,6 +64,43 @@
                 </div>
             </div>    
         </section>
+
+        <!-- What I Do Section -->
+
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <p class="what-i-do-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        </section>
+        <!-- .skills-container>.skills*4>img+p.skill-title+p.skill-description -->
+        <div class="skills-container">
+            <div class="skills">
+                <img src="images/icons/js.png" alt="">
+                <p class="skill-title">Vanila Javascript</p>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ipsam iste nesciunt tenetur impedit deserunt.</p>
+            </div>
+            <div class="skills">
+                <img src="images/icons/react.png" alt="">
+                <p class="skill-title">React</p>
+                <p class="skill-description">Minima, possimus harum voluptatum blanditiis nesciunt ex, numquam commodi reiciendis vero molestias, tempora quaerat porro!</p>
+            </div>
+            <div class="skills">
+                <img src="images/icons/nodejs.png" alt="">
+                <p class="skill-title">Node.js</p>
+                <p class="skill-description">Porro labore earum aspernatur. Praesentium quia, fugit fuga similique in ipsum suscipit nesciunt ullam dicta.</p>
+            </div>
+            <div class="skills">
+                <img src="images/icons/mongo.png" alt="">
+                <p class="skill-title">MongoDB</p>
+                <p class="skill-description">Repellat nulla ex facilis labore deleniti perspiciatis minima aliquid accusantium quia. Provident ex vero sapiente?</p>
+            </div>
+        </div>
+
+        <!-- Resume Section -->
+
+        <section class="resume-section">
+            <h3>A summary of My Resume</h3>
+        </section>
+        
     </main>
     <footer>
 
