--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
                         <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
                         <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
                         <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
                 
@@ -130,23 +130,26 @@
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
                         <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
                         <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
                         <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
         
