responsive about added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header hide">
         <nav>
             <h2 class="nav-title">Nikk<span class="primary-color">o</span>n</h2>
             <ul>
@@ -155,7 +155,7 @@
         
     </main>
     <footer>
-        <section class="contact">
+        <section class="contact hide">
             <div>
                 <h3 class="section-title">Let's Connect</h3>
                 <p class="section-description">
