--- a/index.html
+++ b/index.html
@@ -155,24 +155,26 @@
         
     </main>
     <footer>
-        <section class="contact hide">
+        <section class="contact">
             <div>
-                <h3 class="section-title">Let's Connect</h3>
+                <h3 class="section-title foter-title">Let's Connect</h3>
                 <p class="section-description">
                     Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
                 </p>
-                <a href="">
-                    <img src="images/icons/facebook.png" alt="">
-                </a>
-                <a href="">
-                    <img src="images/icons/twitter.png" alt="">
-                </a>
-                <a href="">
-                    <img src="images/icons/insta.png" alt="">
-                </a>
+                <div class="icon-image">
+                    <a href="">
+                        <img src="images/icons/facebook.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/insta.png" alt="">
+                    </a>
+                </div>
             </div>
             <div>
-                <h3 class="section-title">Let's Message me</h3>
+                <h3 class="section-title foter-title">Let's Message me</h3>
                 <form action="">
                     <input type="text" name="" id="" placeholder="Your Name">
                     <input type="email" name="" id="" placeholder="Your Email">
