all responsive done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="header hide">
+    <header class="header">
         <nav>
             <h2 class="nav-title">Nikk<span class="primary-color">o</span>n</h2>
             <ul>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <div class="header-banner">
-            <div>
+            <div class="header-title">
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Nikkon Mondal</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
